--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pydantic==2.5.0
 
 # LlamaIndex y RAG
 llama-index==0.9.13
-openai==1.3.7
+openai>=1.12.0,<2.0.0
 
 # Utilidades
 python-dotenv==1.0.0
