Migrate from Anthropic to Baseten (Kimi-K2.5)
- Replace Anthropic LLM with Baseten (Kimi-K2.5) for interpretations
- Add BasetenLLM wrapper class compatible with llama-index
- Update API endpoint to https://inference.baseten.co/v1
- Use model moonshotai/Kimi-K2.5
- Maintain same temperature settings:
  * RAG: temperature=0.0, max_tokens=4096
  * Writer: temperature=0.7, max_tokens=16000
- Update environment variables (BASETEN_API_KEY)
- Remove anthropic dependencies from requirements.txt
- Update test scripts for Baseten validation
- Add migration documentation

BREAKING CHANGE: Requires BASETEN_API_KEY env variable instead of ANTHROPIC_API_KEY

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Railway Environment Variables for astro_interpretador_rag_fastapi
 
-# OpenAI Configuration (REQUIRED for Railway)
+# Baseten Configuration (REQUIRED - Uses Kimi-K2.5 model)
+BASETEN_API_KEY=your-baseten-api-key-here
+
+# OpenAI Configuration (REQUIRED for embeddings)
 OPENAI_API_KEY=sk-your-openai-key-here
 
 # CORS Configuration (use wildcard for testing, specific domains for production)
